[package]
name = "rs-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
# rocket = "0.5.0"
rocket_contrib = "0.4.11"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]